some styling improvements, some app layout in place  and ability to log in and logout

--- a/client/src/components/WelcomeScreen.css
+++ b/client/src/components/WelcomeScreen.css
@@ -47,22 +47,37 @@ body {
 .container {
     display: flex;
     border-radius: 0.5em;
-    width: 15%;
+    width: 50%;
+    height: 55%;
     min-width: 12em;
-    min-height: 15em;
-    height: 35%;
+    min-height: 10em;
     z-index: 100;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    border-radius: 1em 1em 1em 1em;
+    border-radius: 2em 0em 2em 0em;
 }
 
 
 /* Login */
+
+.login-area {
+    display: flex;
+    background-color: #ffffff72;
+    justify-content: center;
+    align-items: center;
+    height: 50%;
+    width: 30%;
+    min-width: 15em;
+    min-height: 12em;
+    border-radius: 20%;
+    border-radius: 3em 0em 3em 0em;
+}
+
 .login {
-    border: 0.1em solid #ffffff;
-    box-shadow: 0em 0em 1em grey;
+    border: 0.1em solid #808080;
+    box-shadow: 0em 0em 1em #b2b2b2;
+    background-color: #ffffff35;
 }
 
 .welcome-btn {
@@ -75,27 +90,23 @@ body {
 
 .btn {
     width: 100%;
+    min-height: 4em;
     height: 100%;
-    border: 0.1em solid #ffffff;
-    background-color: #80808022;
-    color: #ffffff;
+    border: 0.2em solid #808080;
+    background-color: #ffffffaa;
+    color: #808080;
     border-radius: 20px 0em 20px 0em;
     font-size: 1.2em;
-    font-weight: 400;
+    font-weight: 500;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     transition: 300ms;
+    text-align: center;
 }
 
 .btn:hover {
     transform: scale(1.05);
     border-radius: 0px 20px 0px 20px;
-}
-
-
-/* Main Chat */
-
-.main-chat {
-    width: 50%;
-    height: 70%;
-    background-color: #80808099;
+    cursor: pointer;
+    background-color: #fac1bbcc;
+    color: #ffffff;
 }
