--- a/client/src/components/MainChat.css
+++ b/client/src/components/MainChat.css
@@ -1,15 +1,20 @@
-
+.chat-page {
+    display: flex;
+    width: 100%;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+}
 
 .main-chat {
     display: flex;
     flex-direction: column;
-    width: 75%;
-    height: 75%;
+    width: 100%;
+    height: 100%;
     min-height: 20em;
     min-width: 41em;
-    background-color: #ffffffcc;
+    background-color: #ffffff;
     border-radius: 0.5em;
-    box-shadow: 0em 0.1em 0.1em #808080;
 }
 
 .top-div-for-header {
@@ -17,7 +22,6 @@
     min-width: 40em;
     min-height: 3.5em;
     background-color: #808080;
-    border-radius: 0.5em 0.5em 0em 0em;
     border-bottom: 0.1em solid black;
 }
 
@@ -26,6 +30,32 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+}
+
+.header-right {
+    display: flex;
+    width: 20%;
+    justify-content: flex-end;
+    gap: 2em;
+}
+
+.add-friend {
+    width: 7em;
+}
+
+.add-friend button {
+    width: 8em;
+    height: 100%;
+    font-size: 1.1em;
+    background-color: #808080;
+    color: white;
+    border: 0.1em solid #808080;
+    border-radius: 1em;
+}
+
+.add-friend button:hover {
+    color: pink;
+    cursor: pointer;
 }
 
 .header-logout {
@@ -53,7 +83,6 @@
 }
 
 
-
 .div-for-content {
     display: flex;
     flex-direction: row;
@@ -63,12 +92,12 @@
 }
 
 .user-list {
-    min-width: 10em;
+    min-width: 15em;
     height: 100%;
-    border-radius: 0em 0em 0.5em 0em;
-    resize: horizontal;
+    border-radius: 0em 0em 0em 0.5em;
     flex-basis: 14%;
-    border-left: 0.1em solid #808080;
+    border-right: 0.1em solid #808080;
+    overflow-y: auto;
 }
 
 .user-list__header {
@@ -83,14 +112,24 @@
     box-shadow: 0em 0.1em 0.1em #808080;
 }
 
-.user-list__content {
+.user-item {
     display: flex;
+    gap: 1em;
+    font-size: 1.1em;
+    max-height: 3em;
+    background-color: #80808099;
+    width: 100%;
+}
+
+.user-item:hover {
+    background-color: #808080;
+    cursor: pointer;
 }
 
 .chat-room {
     min-width: 20em;
     height: 100%;
-    flex-basis: 72%;
+    flex-basis: 86%;
 }
 
 .chat-room__header {
@@ -126,4 +165,93 @@
 
 .chat-room-list__content {
     display: flex;
+}
+
+
+/* modal css */
+.add-friend__modal-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 150;
+    width: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100%;
+    background-color: #80808055;
+}
+
+.add-friend__modal {
+    display: flex;
+    flex-direction: column;
+    background-color: #ffffff;
+    justify-content: space-evenly;
+    align-items: center;
+    height: 40%;
+    width: 18%;
+    min-width: 25em;
+    min-height: 20em;
+    border-radius: 20%;
+    border-radius: 3em 0em 3em 0em;
+}
+
+.add-friend__modal-title {
+    color: #808080;
+}
+
+.add-friend__modal-input {
+    display: flex;
+    justify-content: center;
+    width: 75%;
+    margin-bottom: 1em;
+    border-bottom: 0.2em solid #80808099;
+}
+
+.add-friend__modal-input input {
+    width: 100%;
+    height: 2.8em;
+    font-size: 1.2em;
+    outline: none;
+    position: relative;
+    border: none;
+    background: none;
+    color: #808080;
+}
+
+.add-friend__modal-btns {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    width: 100%;
+}
+
+.add-friend__modal-btn {
+    width: 35%;
+}
+
+.add-friend__modal-btn button {
+    min-width: 8em;
+    width: 100%;
+    height: 4em;
+    background-color: #ffffff;
+    color: #808080;
+    font-size: 1.2em;
+    border-radius: 0.5em;
+    border: 0.1em solid #808080;
+    box-shadow: 0em 0.1em 0.2em #808080;
+}
+
+.add-friend__modal-btn:nth-child(1) button:hover {
+    background-color: #808080;
+    color: #ffffff;
+    border-color: #ffffff;
+    transform: scale(1.1);
+}
+
+.add-friend__modal-btn:nth-child(2) button:hover {
+    background-color: #fac1bb;
+    border-color: #808080;
+    color: #808080;
+    transform: scale(1.1);
 }
