--- a/client/src/components/WelcomeScreen.css
+++ b/client/src/components/WelcomeScreen.css
@@ -1,10 +1,3 @@
-/* 
-
-secondary color: #2bbbce; 
-
-
-*/
-
 
 body {
     margin: 0;
@@ -15,10 +8,6 @@ body {
 
 #root {
     height: 100vh;
-}
-
-.app {
-    height: 100%;
 }
 
 .rise {
@@ -101,6 +90,10 @@ body {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     transition: 300ms;
     text-align: center;
+}
+
+.welcome-btn a  {
+    width: 100%;
 }
 
 .btn:hover {
