--- a/client/src/components/MainChat.css
+++ b/client/src/components/MainChat.css
@@ -1,60 +1,39 @@
+/* Main component */
 .chat-page {
     display: flex;
     width: 100%;
     height: 100%;
     justify-content: center;
     align-items: center;
+    background-color: #363636;
 }
 
 .main-chat {
     display: flex;
     flex-direction: column;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     min-height: 20em;
     min-width: 41em;
-    background-color: #ffffff;
     border-radius: 0.5em;
 }
 
-.top-div-for-header {
-    width: 100%;
-    min-width: 40em;
-    min-height: 3.5em;
-    background-color: #808080;
-    border-bottom: 0.1em solid black;
-}
-
-.header {
-    height: 100%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.header-right {
-    display: flex;
-    width: 20%;
-    justify-content: flex-end;
-    gap: 2em;
-}
-
 .add-friend {
-    width: 7em;
+    width: 100%;
 }
 
 .add-friend button {
-    width: 8em;
-    height: 100%;
+    width: 100%;
+    height: 3em;
     font-size: 1.1em;
-    background-color: #808080;
-    color: white;
+    background-color: #46b7c6;
+    color: #363636;
     border: 0.1em solid #808080;
-    border-radius: 1em;
+    border-radius: 0.2em;
 }
 
 .add-friend button:hover {
-    color: pink;
+    background-color: #86effd;
     cursor: pointer;
 }
 
@@ -64,21 +43,20 @@
     width: 7%;
     min-width: 5em;
     height: 100%;
-    border-radius: 1em;
 }
 
 .header-logout__btn {
     width: 8em;
     height: 100%;
     font-size: 1.1em;
-    background-color: #808080;
-    color: white;
+    background-color: #46b7c6;
+    color: #363636;
     border: 0.1em solid #808080;
-    border-radius: 1em;
+    border-radius: 0em 0em 0em 1em;
 }
 
 .header-logout__btn:hover {
-    color: pink;
+    background-color: #86effd;
     cursor: pointer;
 }
 
@@ -87,14 +65,16 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    height: 100%;
+    height: 100vh;
     border-radius: 0em 0em 0.5em 0.5em;
 }
 
 .user-list {
+    position: relative;
+    top: 0;
+    left: 0;
     min-width: 15em;
-    height: 100%;
-    border-radius: 0em 0em 0em 0.5em;
+    height: 100vh;
     flex-basis: 14%;
     border-right: 0.1em solid #808080;
     overflow-y: auto;
@@ -102,69 +82,133 @@
 
 .user-list__header {
     display: flex;
+    position: sticky;
+    top: 0;
     justify-content: center;
     align-items: center;
     background-color: white;
     text-align: center;
     width: 100%;
-    min-height: 2em;
-    height: 4%;
-    box-shadow: 0em 0.1em 0.1em #808080;
+    height: 4em;
+    font-size: 1.1em;
 }
 
 .user-item {
     display: flex;
-    gap: 1em;
+    justify-content: center;
+    gap: 2em;
     font-size: 1.1em;
     max-height: 3em;
-    background-color: #80808099;
+    background-color: #ffffff;
     width: 100%;
 }
 
 .user-item:hover {
-    background-color: #808080;
+    background-color: #86effd;
     cursor: pointer;
 }
 
 .chat-room {
     min-width: 20em;
-    height: 100%;
     flex-basis: 86%;
+    position: relative;
 }
 
 .chat-room__header {
+    display: flex;
+    position: sticky;
+    top: 0;
+    justify-content: space-between;
     background-color: white;
     width: 100%;
-    height: 2em;
-    min-height: 2em;
-    height: 4%;
+    height: 4em;
+    border: 0.1em solid #808080;
     box-shadow: 0em 0.1em 0.1em #808080;
+    font-size: 1.05em;
 }
 
-.chat-room-list {
-    min-width: 10em;
-    height: 100%;
-    border-radius: 0em 0em 0em 0.5em;
-    resize: horizontal;
-    flex-basis: 14%;
-    border-right: 0.1em solid #808080;
-}
-
-.chat-room-list__header {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: white;
-    text-align: center;
+.chat-room__content {
     width: 100%;
-    min-height: 2em;
-    height: 4%;
-    border-right: 0.1em solid #808080;
-    box-shadow: 0em 0.1em 0.1em #808080;
+    overflow-y: scroll;
+    overflow-x: hidden;
+    display: flex;
+    flex-direction: column;
+    height: calc(100% - 5%);
 }
 
-.chat-room-list__content {
+.chat-room__content .message-right {
     display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    margin-bottom: 1em;
+    width: 100%;
+}
+
+.chat-room__content .message-left {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin-bottom: 1em;
+    width: 100%;
+}
+
+.message-item {
+    line-height: 1em;
+    margin-right: 1em;
+    width: 15%;
+    min-width: 5em;
+    background-color: #46b7c6;
+    border-radius: 1em 1em 1em 1em;
+}
+
+.message-item p.message-body {
+    word-wrap: break-word;
+    white-space: normal;
+    height: auto;
+}
+
+.message-enablers {
+    display: flex;
+    gap: 1em;
+    position: fixed;
+    bottom: 0.5em;
+    width: 100%;
+    margin-left: 0.5em;
+}
+
+.message-input {
+    width: 50%;
+    max-width: 50%;
+    height: 2.9em;
+    font-size: 1.2em;
+    border-radius: 0.5em;
+    box-shadow: 0em 0.1em 0.1em #808080;
+    border: 0.2em solid #46b7c6;
+    overflow-wrap: break-word;
+    resize: none;
+}
+
+.message-input:focus {
+    outline: none;
+    border: 0.2em solid #808080;
+    height: 5em;
+}
+
+.message-btn {
+    width: 12%;
+    min-width: 5em;
+    height: 3.2em;
+    background-color: #46b7c6;
+    color: #363636;
+    font-size: 1.1em;
+    border-radius: 0.5em;
+    border: 0.1em solid #808080;
+}
+
+.message-btn:hover {
+    transform: scale(1.05);
+    background-color: #86effd;
+    cursor: pointer;
 }
 
 
@@ -188,7 +232,7 @@
     background-color: #ffffff;
     justify-content: space-evenly;
     align-items: center;
-    height: 40%;
+    height: 30%;
     width: 18%;
     min-width: 25em;
     min-height: 20em;
@@ -197,7 +241,7 @@
 }
 
 .add-friend__modal-title {
-    color: #808080;
+    color: #363636;
 }
 
 .add-friend__modal-input {
@@ -205,7 +249,7 @@
     justify-content: center;
     width: 75%;
     margin-bottom: 1em;
-    border-bottom: 0.2em solid #80808099;
+    border-bottom: 0.2em solid #363636;
 }
 
 .add-friend__modal-input input {
@@ -216,7 +260,7 @@
     position: relative;
     border: none;
     background: none;
-    color: #808080;
+    color: #363636;
 }
 
 .add-friend__modal-btns {
@@ -235,23 +279,25 @@
     width: 100%;
     height: 4em;
     background-color: #ffffff;
-    color: #808080;
+    color: #363636;
     font-size: 1.2em;
     border-radius: 0.5em;
-    border: 0.1em solid #808080;
-    box-shadow: 0em 0.1em 0.2em #808080;
+    border: 0.1em solid #363636;
+    box-shadow: 0em 0.1em 0.2em #363636;
 }
 
 .add-friend__modal-btn:nth-child(1) button:hover {
-    background-color: #808080;
+    background-color: #363636;
     color: #ffffff;
     border-color: #ffffff;
     transform: scale(1.1);
+    cursor: pointer;
 }
 
 .add-friend__modal-btn:nth-child(2) button:hover {
-    background-color: #fac1bb;
-    border-color: #808080;
-    color: #808080;
+    background-color: #46b7c6;
+    border-color: #363636;
+    color: #363636;
     transform: scale(1.1);
+    cursor: pointer;
 }
