--- a/client/src/components/WelcomeScreen.css
+++ b/client/src/components/WelcomeScreen.css
@@ -2,12 +2,14 @@
 body {
     margin: 0;
     padding: 0;
-    overflow: hidden;
+    height: 100vh;
+    overflow-x: hidden;
+    overflow-y: hidden;
+    font-family: 'Patrick Hand', cursive;
 }
 
-
 #root {
-    height: 100vh;
+    height: 100%;
 }
 
 .rise {
@@ -81,7 +83,7 @@ body {
     width: 100%;
     min-height: 4em;
     height: 100%;
-    border: 0.2em solid #808080;
+    border: 0.1em solid #808080;
     background-color: #ffffffaa;
     color: #808080;
     border-radius: 20px 0em 20px 0em;
@@ -100,6 +102,6 @@ body {
     transform: scale(1.05);
     border-radius: 0px 20px 0px 20px;
     cursor: pointer;
-    background-color: #fac1bbcc;
+    background-color: #46b7c6;
     color: #ffffff;
 }
