--- a/client/src/components/MainChat.css
+++ b/client/src/components/MainChat.css
@@ -78,6 +78,8 @@
     flex-basis: 14%;
     border-right: 0.1em solid #808080;
     overflow-y: auto;
+    scrollbar-width: thin;
+    scrollbar-color: #46b7c6 #ffffff; 
 }
 
 .user-list__header {
@@ -129,11 +131,14 @@
 
 .chat-room__content {
     width: 100%;
-    overflow-y: scroll;
+    overflow-y: auto;
     overflow-x: hidden;
+    ;
+    scrollbar-width: thin;
+    scrollbar-color: #46b7c6 #363636; 
     display: flex;
     flex-direction: column;
-    height: calc(100% - 5%);
+    height: calc(100% - 14%);
 }
 
 .chat-room__content .message-right {
@@ -167,17 +172,21 @@
     height: auto;
 }
 
+.message-item p.message-time {
+    font-size: 0.8em;
+}
+
 .message-enablers {
     display: flex;
     gap: 1em;
     position: fixed;
     bottom: 0.5em;
     width: 100%;
-    margin-left: 0.5em;
+    margin-left: 0.3em;
 }
 
 .message-input {
-    width: 50%;
+    width: 40%;
     max-width: 50%;
     height: 2.9em;
     font-size: 1.2em;
