--- a/client/src/components/WelcomeScreen.css
+++ b/client/src/components/WelcomeScreen.css
@@ -5,7 +5,7 @@ body {
     height: 100vh;
     overflow-x: hidden;
     overflow-y: hidden;
-    font-family: 'Patrick Hand', cursive;
+    font-family: 'Dosis', sans-serif;
 }
 
 #root {
@@ -84,7 +84,7 @@ body {
     min-height: 4em;
     height: 100%;
     border: 0.1em solid #808080;
-    background-color: #ffffffaa;
+    background-color: #ffffff99;
     color: #808080;
     border-radius: 20px 0em 20px 0em;
     font-size: 1.2em;
@@ -92,6 +92,7 @@ body {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     transition: 300ms;
     text-align: center;
+    box-shadow: 0em 0em 1em #b2b2b2;
 }
 
 .welcome-btn a  {
