--- a/client/src/components/MainChat.css
+++ b/client/src/components/MainChat.css
@@ -1,4 +1,4 @@
-/* Main component */
+
 .chat-page {
     display: flex;
     width: 100%;
@@ -16,25 +16,6 @@
     min-height: 20em;
     min-width: 41em;
     border-radius: 0.5em;
-}
-
-.add-friend {
-    width: 100%;
-}
-
-.add-friend button {
-    width: 100%;
-    height: 3em;
-    font-size: 1.1em;
-    background-color: #46b7c6;
-    color: #363636;
-    border: 0.1em solid #808080;
-    border-radius: 0.2em;
-}
-
-.add-friend button:hover {
-    background-color: #86effd;
-    cursor: pointer;
 }
 
 .header-logout {
@@ -69,6 +50,76 @@
     border-radius: 0em 0em 0.5em 0.5em;
 }
 
+
+/* Pending Friend Popup */
+
+.pending-list-toggle {
+    width: 100%;
+    height: 4em;
+}
+
+.pending-list-toggle__btn {
+    width: 100%;
+    height: 4em;
+    background-color: #ffffff;
+    border: 0.1em solid #363636;
+}
+
+.pending-list-toggle__btn:hover {
+    cursor: pointer;
+    background-color: #b1b1b1;
+}
+
+.pending-friend-list {
+    display: flex;
+    position: absolute;
+    background-color: white;
+    width: 100%;
+    height: auto;
+}
+
+.pending-item {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    border-bottom: 0.1em solid #363636;
+    height: 6.3em;
+    width: 100%;
+}
+
+.pending-btns {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    gap: 1em;
+}
+
+.pending-btn {
+    width: 8em;
+    height: 3em;
+}
+
+.pending-btn:nth-child(1) {
+    background-color: #46b7c6;
+}
+
+.pending-btn:nth-child(2) {
+    background-color: white;
+}
+
+.pending-btn:nth-child(1):hover {
+    background-color: #86effd;
+    cursor: pointer;
+}
+
+.pending-btn:nth-child(2):hover {
+    background-color: #b1b1b1;
+    cursor: pointer;
+}
+
+
+/* Friend List */
+
 .user-list {
     position: relative;
     top: 0;
@@ -93,6 +144,25 @@
     width: 100%;
     height: 4em;
     font-size: 1.1em;
+}
+
+.add-friend {
+    width: 100%;
+}
+
+.add-friend button {
+    width: 100%;
+    height: 3em;
+    font-size: 1.1em;
+    background-color: #46b7c6;
+    color: #363636;
+    border: 0.1em solid #808080;
+    border-radius: 0.2em;
+}
+
+.add-friend button:hover {
+    background-color: #86effd;
+    cursor: pointer;
 }
 
 .user-item {
