--- a/client/src/components/MainChat.css
+++ b/client/src/components/MainChat.css
@@ -266,7 +266,7 @@
     scrollbar-color: #46b7c6 #363636; 
     display: flex;
     flex-direction: column;
-    height: calc(100% - 18%);
+    height: 82%;
 }
 
 .chat-room__content::-webkit-scrollbar {
