--- a/client/src/components/WelcomeScreen.css
+++ b/client/src/components/WelcomeScreen.css
@@ -18,6 +18,7 @@ body {
 }
 
 .welcome-page {
+    background-color: #363636;
     height: 100%;
     width: 100%;
     z-index: 0;
@@ -55,8 +56,9 @@ body {
 
 .login-area {
     display: flex;
-    background-color: #ffffff72;
-    box-shadow: 0em 0em 0.5em #363636;
+    background-color: #363636;
+    box-shadow: 0em 0em 0.2em #46b7c6;
+    border: 0.2em solid #46b7c6;
     justify-content: center;
     align-items: center;
     height: 40%;
@@ -68,9 +70,9 @@ body {
 }
 
 .login {
-    border: 0.1em solid #363636;
-    box-shadow: 0em 0em 0.2em #363636;
-    background-color: #ffffff95;
+    border: 0.1em solid #46b7c6;
+    box-shadow: 0em 0em 0.2em #46b7c6;
+    background-color: #363636;
     border-radius: 1em;
 }
 
@@ -86,7 +88,7 @@ body {
     width: 100%;
     min-height: 4em;
     height: 100%;
-    border: 0.1em solid #363636;
+    border: 0.1em solid #46b7c6;
     background-color: #ffffff;
     color: #363636;
     border-radius: 0.5em;
@@ -107,4 +109,5 @@ body {
     cursor: pointer;
     background-color: #46b7c6;
     color: #ffffff;
+    border: 0.1em solid #363636;
 }
