small change to colour of login container

--- a/client/src/components/WelcomeScreen.css
+++ b/client/src/components/WelcomeScreen.css
@@ -56,7 +56,7 @@ body {
 
 .login-area {
     display: flex;
-    background-color: #363636;
+    background-color: #46b7c611;
     box-shadow: 0em 0em 0.2em #46b7c6;
     border: 0.2em solid #46b7c6;
     justify-content: center;
